--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <h4 class="mt-3 mb-4 text-center">PRODUK</h4>
           </div>
         </div>
-        <div class="row row-cols-lg-5 row-cols-sm-3 row-cols-1">
-          <div class="col p-3">
+        <div class="row justify-content-center pb-5">
+          <!-- <div class="col p-3">
             <a href="">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
@@ -341,9 +341,8 @@
                 </div>
               </div>
             </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
+          </div> -->
+          <div class="card-group">
               <div class="card d-block mx-auto" style="width: 200px;">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
@@ -356,7 +355,148 @@
                   </div>
                 </div>
               </div>
-            </a>
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="card-group">
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="card-group">
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="card-group">
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="card-group">
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="card-group">
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card d-block mx-auto" style="width: 200px;">
+                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
+                <div class="card-body">
+                  <div class="card-title text-center">
+                    Scarlett Whitening Body Lotion Charming
+                  </div>
+                  <div class="card-text d-flex">
+                    <h5> Rp. 70.000</h5>
+                    <p class="text-muted ml-4">12 Terjual</p>
+                  </div>
+                </div>
+              </div>
           </div>
         </div>
       </div>
