--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
             <h4 class="mt-3 mb-4 text-center">PRODUK</h4>
           </div>
         </div>
-        <div class="row justify-content-center pb-5">
-          <!-- <div class="col p-3">
+        <div class="row row-cols-lg-5 row-cols-sm-3 row-cols-2">
+          <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -136,7 +136,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -152,7 +152,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -168,7 +168,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -184,7 +184,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -200,7 +200,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -216,7 +216,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -232,7 +232,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -248,7 +248,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -264,7 +264,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -280,7 +280,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -296,7 +296,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -312,7 +312,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -328,7 +328,7 @@
           </div>
           <div class="col p-3">
             <a href="">
-              <div class="card d-block mx-auto" style="width: 200px;">
+              <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
                   <div class="card-title text-center">
@@ -341,162 +341,6 @@
                 </div>
               </div>
             </a>
-          </div> -->
-          <div class="card-group">
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="card-group">
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="card-group">
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="card-group">
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="card-group">
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="card-group">
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-              <div class="card d-block mx-auto" style="width: 200px;">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
           </div>
         </div>
       </div>
