--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
             <h4 class="mt-3 mb-4 text-center">PRODUK</h4>
           </div>
         </div>
-        <div class="row row-cols-lg-5 row-cols-sm-3 row-cols-2">
-          <div class="col p-3">
-            <a href="">
+        <div class="row justify-content-center">
+          <div class="col-lg-2 col-md-6 col-6">
               <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
@@ -132,10 +131,8 @@
                   </div>
                 </div>
               </div>
-            </a>
           </div>
-          <div class="col p-3">
-            <a href="">
+          <div class="col-lg-2 col-md-6 col-6">
               <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
@@ -148,10 +145,8 @@
                   </div>
                 </div>
               </div>
-            </a>
           </div>
-          <div class="col p-3">
-            <a href="">
+          <div class="col-lg-2 col-md-6 col-6">
               <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
@@ -164,10 +159,8 @@
                   </div>
                 </div>
               </div>
-            </a>
           </div>
-          <div class="col p-3">
-            <a href="">
+          <div class="col-lg-2 col-md-6 col-6">
               <div class="card d-block mx-auto">
                 <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
                 <div class="card-body">
@@ -180,167 +173,6 @@
                   </div>
                 </div>
               </div>
-            </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col p-3">
-            <a href="">
-              <div class="card d-block mx-auto">
-                <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-                <div class="card-body">
-                  <div class="card-title text-center">
-                    Scarlett Whitening Body Lotion Charming
-                  </div>
-                  <div class="card-text d-flex">
-                    <h5> Rp. 70.000</h5>
-                    <p class="text-muted ml-4">12 Terjual</p>
-                  </div>
-                </div>
-              </div>
-            </a>
           </div>
         </div>
       </div>
