--- a/index.html
+++ b/index.html
@@ -117,37 +117,72 @@
             <h4 class="mt-3 mb-4 text-center">PRODUK</h4>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mb-5 p-2">
           <div class="col-lg-2 col-md-6 col-6 card-produk">
-            <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-            <p>Scarlett Whitening Body Lotion Charming</p>
-            <h5>Rp.70.000</h5>
-            <p class="text-muted">12 Terjual</p>
+            <a href="">
+              <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
+              <p>Scarlett Whitening Body Lotion</p>
+              <h5>Rp.70.000</h5>
+              <p class="text-muted">12 Terjual</p>
+            </a>
           </div>
           <div class="col-lg-2 col-md-6 col-6 card-produk">
-            <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-            <p>Scarlett Whitening Body Lotion Charming</p>
-            <h5>Rp.70.000</h5>
-            <p class="text-muted">12 Terjual</p>
+            <a href="">
+              <img src="assets/img/Produk/ShowerScrub.png" width="150px" class="d-block mx-auto mt-2">
+              <p>Scarlett Whitening Shower Scrub</p>
+              <h5>Rp.70.000</h5>
+              <p class="text-muted">12 Terjual</p>
+            </a>
           </div>
           <div class="col-lg-2 col-md-6 col-6 card-produk">
-            <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-            <p>Scarlett Whitening Body Lotion Charming</p>
-            <h5>Rp.70.000</h5>
-            <p class="text-muted">12 Terjual</p>
+            <a href="">
+              <img src="assets/img/Produk/BodyScrub.png" width="150px" class="d-block mx-auto mt-2">
+              <p>Scarlett Whitening Body Scrub</p>
+              <h5>Rp.70.000</h5>
+              <p class="text-muted">12 Terjual</p>
+            </a>
           </div>
           <div class="col-lg-2 col-md-6 col-6 card-produk">
-            <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-            <p>Scarlett Whitening Body Lotion Charming</p>
-            <h5>Rp.70.000</h5>
-            <p class="text-muted">12 Terjual</p>
+            <a href="">
+              <img src="assets/img/Produk/FacialWash.png" width="150px" class="d-block mx-auto mt-2">
+              <p>Scarlett Whitening Facial Wash</p>
+              <h5>Rp.70.000</h5>
+              <p class="text-muted">12 Terjual</p>
+            </a>
           </div>
           <div class="col-lg-2 col-md-6 col-6 card-produk">
-            <img src="assets/img/Produk/Charming.png" width="150px" class="d-block mx-auto mt-2">
-            <p>Scarlett Whitening Body Lotion Charming</p>
-            <h5>Rp.70.000</h5>
-            <p class="text-muted">12 Terjual</p>
+            <a href="">
+              <img src="assets/img/Produk/Paket5.png" width="150px" class="d-block mx-auto mt-2">
+              <p>Scarlett Whitening Paket Hemat 5 Item</p>
+              <h5> <span class="text-muted" style="text-decoration: line-through;"> <small>Rp. 350.000</small> </span> Rp.300.000</h5>
+              <p class="text-muted">12 Terjual</p>
+            </a>
           </div>
+          <div class="col-lg-2 col-md-6 col-6 card-produk">
+            <a href="">
+              <img src="assets/img/Produk/paket12@2x.png" width="150px" class="d-block mx-auto mt-2">
+              <p>Scarlett Whitening Paket Reseller 12 Botol</p>
+              <h5> <span class="text-muted" style="text-decoration: line-through;"> <small>Rp. 840.000</small> </span> Rp.700.000</h5>
+              <p class="text-muted">12 Terjual</p>
+            </a>
+          </div>
+          <div class="col-lg-2 col-md-6 col-6 card-produk">
+            <a href="">
+              <img src="assets/img/Produk/paket24@2x.png" width="150px" class="d-block mx-auto mt-2">
+              <p>Scarlett Whitening Paket Reseller 24 Botol</p>
+              <h5> <span class="text-muted" style="text-decoration: line-through;"> <small>Rp. 1.680.000</small> </span> Rp.1.440.000</h5>
+              <p class="text-muted">12 Terjual</p>
+            </a>
+          </div>
+          <div class="col-lg-2 col-md-6 col-6 card-produk">
+            <a href="">
+              <img src="assets/img/Produk/paket48@2x.png" width="150px" class="d-block mx-auto mt-2">
+              <p>Scarlett Whitening Paket Reseller 48 Botol</p>
+              <h5> <span class="text-muted" style="text-decoration: line-through;"> <small>Rp. 3.360.000</small> </span> Rp.2.880.000</h5>
+              <p class="text-muted">12 Terjual</p>
+            </a>
+          </div>
+         
         </div>
       </div>
     </section>
