Finish landing page

--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
           </div>
         </div>
         <div class="row justify-content-center mb-5 p-2">
-          <div class="col-lg-2 col-md-6 col-6 kategori-produk">
+          <div class="col-lg-2 col-md-6 col-6 card-kategori">
             <a href="">
               <img src="assets/img/kategori/BodyLotion.png" class="card-img-top d-block mx-auto img-fluid" alt="">
               <p>Body Lotion</p>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-6 kategori-produk">
+          <div class="col-lg-2 col-md-6 col-6 card-kategori">
             <a href="">
               <img src="assets/img/kategori/BodyScrub.png" class="card-img-top d-block mx-auto img-fluid" alt="">
               <p>Body Scrub</p>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-6 kategori-produk">
+          <div class="col-lg-2 col-md-6 col-6 card-kategori">
             <a href="">
               <img src="assets/img/kategori/ShowerScrub.png" class="card-img-top d-block mx-auto img-fluid" alt="">
               <p>Shower Scrub</p>
             </a>
           </div>
-          <div class="col-lg-2 col-md-6 col-6 kategori-produk">
+          <div class="col-lg-2 col-md-6 col-6 card-kategori">
             <a href="">
               <img src="assets/img/kategori/HairTreatment.png" class="card-img-top d-block mx-auto img-fluid" alt="">
               <p>Hair Treatment</p>
@@ -152,7 +152,7 @@
             <a href="">
               <img src="assets/img/Produk/paket48@2x.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening Paket Reseller 48 Botol</p>
-              <h5> <span class="text-muted" style="text-decoration: line-through;"> <small>Rp. 3.360.000</small> </span> Rp.2.880.000</h5>
+              <h5> <span class="text-muted" style="text-decoration: line-through;"> <small>Rp. 3.360.000</small> </span> Rp.2.784.000</h5>
               <p class="text-muted">12 Terjual</p>
             </a>
           </div>
