--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>SCARLETT WHITENING BEKASI</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -93,7 +93,7 @@
         </div>
         <div class="row justify-content-center mb-5 p-2">
           <div class="col-lg-2 col-md-6 col-6 card-produk">
-            <a href="">
+            <a href="bodylotion.html">
               <img src="assets/img/Produk/BodyLotion.png" width="150px" class="d-block mx-auto mt-2">
               <p>Scarlett Whitening Body Lotion</p>
               <h5>Rp.70.000</h5>
