--- a/bodylotion.html
+++ b/bodylotion.html
@@ -66,11 +66,19 @@
                     <h1>Rp. 70.000</h1>
                     <br>
                     <p>Pengiriman</p>
-                    <div class="d-flex">
-                        <img src="assets/img/pengiriman/custom – 1.png" alt="">
-                        <img src="assets/img/pengiriman/jne.png" alt="">
-                        <img src="assets/img/pengiriman/gojek.png" alt="">
-                        <img src="assets/img/pengiriman/grab.png" alt="">
+                    <div class="row">
+                        <div class="col-lg-3 col-12 mb-4">
+                            <img src="assets/img/pengiriman/custom – 1.png" alt="">
+                        </div>
+                        <div class="col-lg-3 col-12 mb-4">
+                            <img src="assets/img/pengiriman/jne.png" alt="">
+                        </div>
+                        <div class="col-lg-3 col-12 mb-4">
+                            <img src="assets/img/pengiriman/gojek.png" alt="">
+                        </div>
+                        <div class="col-lg-3 col-12 mb-4">
+                            <img src="assets/img/pengiriman/grab.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
